--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,8 +1,8 @@
 img{
     vertical-align: middle;
 }
-a{
-    color: rgb(3, 38, 102);
+p{
+    text-align: justify;
 }
 /*Utilities*/
 .active{
@@ -27,7 +27,7 @@ a{
 .form-group {
     margin-bottom: 15px;
 }
-container-login{
+.container-login{
     width: 25%;
     background-color: rgb(116, 28, 28);
 
@@ -86,32 +86,10 @@ header {
     display: block;
 
 }
-.sidebar{
-    background-color: #f8f8f8;
-    border-right: 1px solid  #e6e6e6;
-    left: 0;
-    max-height: 95%;
-    min-height: 90%;
-    position: absolute;
-    display: flex;
-    width: 200px;
-}
-@media (min-width:768px){
-    .col-sm-3{
-        width: 25%;
-    }
-}
-.sidebar a{
-    font-size: 1em;
-    padding: 0 !important;
-}
-aside{
-    display: block;
-}
 .container-detalle{
-    padding-left: 20%;
-    width: 75%;
-    text-align: left;
+    padding-left: 50px;
+    width: 1000px;
+    text-align: justify;
 }
 .image-container
 {
@@ -147,4 +125,7 @@ cursor: pointer;
 }
 .text-link{
     color: blue;
+}
+input.mayusculas {
+    text-transform: uppercase;
 }
