--- a/views/acercade.html
+++ b/views/acercade.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-     crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous"> 
      <link rel="stylesheet" href="/Proyecto/css/mystyle.css">
      <title>BI Armonización Contable</title>
 </head>
@@ -18,37 +18,35 @@
         </div>
     </header>
     <main>
-        <section >
-            <aside class="sidebar">
+        <div class="d-flex">
+            <aside class="bg-light p-2" style="width: 250px;">
                 <ul>
-                    <li><a href="menu.html"> Inicio</a> </li>
+                    <li><a href="menu.html" >Inicio</a> </li>
                     <li><a href="miPerfil.html" > Mi Cuenta</a> </li>
-                    <li><a href="acercade.html" class="active"> A cerca de</a> </li>
+                    <li><a href="usuario.html" > Usuario</a> </li>
+                    <li><a href="acercade.html" class="active" > A cerca de</a> </li>
                     <li><a href="index.html"> Salir</a> </li>
                 </ul>
             </aside>
-        </section>
-       <section class="container-detalle">
-            <h2>A cerca de este proyecto</h2>
-            <p style="text-align: justify;">En el presente proyecto, se implementarán herramientas y conceptos de la Inteligencia de Negocios(BI) 
-                para identificar patrones y visualizar datos contables de manera integral y efectiva en la armonización 
-                contable. Actualmente, la armonización contable se ha convertido en la base principal para garantizar la 
-                transparencia, comparabilidad y eficiencia en la presentación de la información financiera en México, 
-                busca unificar criterios y normas contables a nivel nacional, permitiendo que las entidades públicas 
-                presenten sus estados financieros de manera coherente y comparable. Como resultado de este concepto, 
-                el <a href="https://www.bajacalifornia.gob.mx/" class="text-link"> Gobierno del Estado de Baja 
-                California</a> tuvo la necesidad de modificar sus sistemas institucionales 
-                de tal forma que se pudierán alinear a la contabilidad gubernamental nacional para el registro de los 
-                momentos contables.</p>
-            <p style="text-align: justify;">Este proyecto tiene como objetivo principal: Implementar inteligencia de negocios para que los usuarios 
-                del sistema de contabilidad, puedan monitorear y analizar los momentos contables de manera eficiente, 
-                se busca apoyar la toma de decisiones de manera oportuna y enfocada a resultados, mejorando la visibilidad y
-                comprensión de los procesos contables y presupuestales y a la vez, permitirá la detección de posibles inconsistencias 
-                en el registro contable.</p>
-        </section>
-        <section class="container-detalle">
-            <p>Algunos conceptos que se abordarán en el proyecto:</p>
-                <table class="table table-dark table-striped">
+            <div class="container-detalle" >
+                <h2>A cerca de este proyecto</h2>
+                <p>En el presente proyecto, se implementarán herramientas y conceptos de la Inteligencia de Negocios(BI) 
+                    para identificar patrones y visualizar datos contables de manera integral y efectiva en la armonización 
+                    contable. Actualmente, la armonización contable se ha convertido en la base principal para garantizar la 
+                    transparencia, comparabilidad y eficiencia en la presentación de la información financiera en México, 
+                    busca unificar criterios y normas contables a nivel nacional, permitiendo que las entidades públicas 
+                    presenten sus estados financieros de manera coherente y comparable. Como resultado de este concepto, 
+                    el <a href="https://www.bajacalifornia.gob.mx/" class="text-link"> Gobierno del Estado de Baja 
+                    California</a> tuvo la necesidad de modificar sus sistemas institucionales 
+                    de tal forma que se pudierán alinear a la contabilidad gubernamental nacional para el registro de los 
+                    momentos contables.</p>
+                    <p>Este proyecto tiene como objetivo principal: Implementar inteligencia de negocios para que los usuarios 
+                    del sistema de contabilidad, puedan monitorear y analizar los momentos contables de manera eficiente, 
+                    se busca apoyar la toma de decisiones de manera oportuna y enfocada a resultados, mejorando la visibilidad y
+                    comprensión de los procesos contables y presupuestales y a la vez, permitirá la detección de posibles inconsistencias 
+                    en el registro contable.</p>
+                <p>Algunos conceptos que se abordarán en el proyecto:</p>
+                <table class="table">
                     <thead>
                         <th>No.</th>
                         <th>Conceptos BI</th>
@@ -62,16 +60,17 @@
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>Visualización de datos</td>
-                            <td>En el uso de gráficos, tablas y dashboards para representar la información</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Analítica de datos</td>
-                            <td>Examinar conjunto de datos para extraer conclusiones de la información que contienen</td>
+                                <td>Visualización de datos</td>
+                                <td>En el uso de gráficos, tablas y dashboards para representar la información</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Analítica de datos</td>
+                                <td>Examinar conjunto de datos para extraer conclusiones de la información que contienen</td>
                     </tbody>
                 </table>
-        </section>
+            </div>
+        </div>
     </main>
 </body>
 </html>
