--- a/views/menu.html
+++ b/views/menu.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-     crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous"> 
      <link rel="stylesheet" href="/Proyecto/css/mystyle.css">
      <title>BI Armonización Contable</title>
 </head>
@@ -18,22 +18,25 @@
         </div>
     </header>
     <main>
-        <section>
-            <aside class="sidebar">
+        <div class="d-flex">
+            <aside class="bg-light p-2" style="width: 250px;">
                 <ul>
-                    <li><a href="menu.html"  class="active">Inicio</a> </li>
-                    <li><a href="miPerfil.html"> Mi Cuenta</a> </li>
+                    <li><a href="menu.html" class="active"  >Inicio</a> </li>
+                    <li><a href="miPerfil.html" > Mi Cuenta</a> </li>
+                    <li><a href="usuario.html" > Usuario</a> </li>
                     <li><a href="acercade.html"> A cerca de</a> </li>
                     <li><a href="index.html"> Salir</a> </li>
                 </ul>
             </aside>
-        </section>
-            <div class="image-container">
-                <div class="image-box">
-                    <p class="image-desc"></p>
-                    <img src="/Proyecto/imagenes/Logo-Oficial-Institucional.png" alt="Armonización Contable">
+            <div class="flex-grow-1 p-3 bg-white"> 
+                <div class="image-container">
+                    <div class="image-box">
+                        <p class="image-desc"></p>
+                        <img src="/Proyecto/imagenes/Logo-Oficial-Institucional.png" alt="Armonización Contable">
+                    </div>
                 </div>
             </div>
+        </div>
     </main>
 </body>
 
