--- a/views/miPerfil.html
+++ b/views/miPerfil.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-     crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous"> 
      <link rel="stylesheet" href="/Proyecto/css/mystyle.css">
      <title>BI Armonización Contable</title>
 </head>
@@ -18,67 +18,80 @@
         </div>
     </header>
     <main>
-        <div >
-        <section >
-            <aside class="sidebar">
+        <div class="d-flex">
+            <aside class="bg-light p-2" style="width: 250px;">
                 <ul>
                     <li><a href="menu.html" >Inicio</a> </li>
-                    <li><a href="miPerfil.html" class="active"> Mi Cuenta</a> </li>
+                    <li><a href="miPerfil.html" class="active" > Mi Cuenta</a> </li>
+                    <li><a href="usuario.html" > Usuario</a> </li>
                     <li><a href="acercade.html"> A cerca de</a> </li>
                     <li><a href="index.html"> Salir</a> </li>
                 </ul>
             </aside>
-        </section>
-    </div>
-        <section class="container-detalle">
-            <h2>Datos generales / Contraseña</h2>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Nombre</span>
-                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            <div class="flex-grow-1 p-3 bg-white">
+                <h2>Datos Generales / Cambio Contraseña</h2>
+                <form id="formRegistro">
+                    <div class="row">
+                        <div class="col-4">
+                            <span class="fw-bold">Nombre</span>
+                            <input type="text" id="nombre" class="form-control"  aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        </div>
+                        <div class="col-4">
+                            <span class="fw-bold">Ap. Paterno </span>
+                            <input type="text" id="apPaterno" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        </div>
+                        <div class="col-4">
+                            <span class="fw-bold">Ap. Materno</span>
+                            <input type="text" id="apMaterno" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        </div>
+                        <div class="col-4">
+                            <span class="fw-bold">Usuario App </span>
+                            <input type="text" id="usuarioApp" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        </div>
+                        <div class="col-4">
+                            <span class="fw-bold">Correo </span>
+                            <input type="email" id="correo" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" >
+                        </div>
+                        
+                        <div class="col-2">
+                            <span class="fw-bold">RFC </span>
+                            <input type="text" id="rfc" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" >
+                        </div>
+                        
+                        <div class="col-2">
+                            <span class="fw-bold">Homoclave</span>
+                            <input type="text" id="homoclave" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" >
+                        </div>
+                        <div class="col-2">
+                            <span class="fw-bold">Municipio</span>
+                            <input type="text" id="txtMpo" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        </div>
+                </form>
             </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Ap.Paterno</span>
-                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-              </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Ap. Materno</span>
-                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            <div class="flex-grow-1 p-3 bg-white">
+                <h3>Cambiar Contraseña</h3>
+                <div class="alert alert-warning" > 
+                    <span class="fa fa-info-circle"></span>
+                    "Si desea cambiar su Contraseña, ingrese 
+                    la actual y por la nueva que va a reemplazar. Al finalizar, 
+                    se le enviará un correo confirmando su nueva Contraseña de acceso."
+                </div>
             </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Usuario App</span>
-                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            <div class="flex-grow-1 p-3 bg-white">
+                <div class="col-3">
+                    <span class="fw-bold">Contraseña Actual</span>
+                    <input id="txtPswActual" class="form-control" type="text">
+                </div>
+                <div class="col-3">
+                    <span class="fw-bold">Contraseña Nueva</span>
+                    <input id="txtPswNvo" class="form-control" type="text">
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-primary" onclick="cambiarPswd()">
+                        Guardar Cambios</button>
+                </div>
             </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Correo</span>
-                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-            </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Teléfono y/o Ext.</span>
-                <input type="number" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-            </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Municipio</span>
-                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-            </div>
-            <h2>Cambiar Contraseña</h2>
-            <div class="alert alert-warning"> 
-                <span class="fa fa-info-circle"></span>
-                "Si desea cambiar su Contraseña, ingrese 
-                la actual y por la nueva que va a reemplazar. Al finalizar, 
-                se le enviará un correo confirmando su nueva Contraseña de acceso."
-            </div>
-            <div class="mb-3">
-                <label>Contraseña Actual</label>
-                <input class="form-control" type="text">
-            </div>
-            <div class="mb-3">
-                <label>Nueva Contraseña</label>
-                <input class="form-control" type="text">
-            </div>
-            <div class="mb-3">
-                <button class="btn btn-primary">Guardar Cambios</button>
-            </div>
-        </section>
+        </div>
     </main>
 </body>
 
