Se agrego la funcionalidad de guardar en localstorage y boton eliminar, ademas de modificar un poco la presentacion

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -114,9 +114,9 @@ border-radius: 10px;
 transition: transform 0.3s ease-in-out;
 cursor: pointer;
 }
-.image-box img:hover{
-    transform: scale(1.1); /* Aumenta el tamaño un 20% */
-}
+/* .image-box img:hover{
+    transform: scale(1.1); /* Aumenta el tamaño un 20% 
+} */
 .image-desc{
     font-size: 16px;
     font-weight: bold;
