--- a/views/acercade.html
+++ b/views/acercade.html
@@ -28,7 +28,7 @@
                     <li><a href="index.html"> Salir</a> </li>
                 </ul>
             </aside>
-            <div class="container-detalle" >
+            <div class="container" >
                 <h2>A cerca de este proyecto</h2>
                 <p>En el presente proyecto, se implementarán herramientas y conceptos de la Inteligencia de Negocios(BI) 
                     para identificar patrones y visualizar datos contables de manera integral y efectiva en la armonización 
