--- a/views/menu.html
+++ b/views/menu.html
@@ -30,9 +30,9 @@
             </aside>
             <div class="flex-grow-1 p-3 bg-white"> 
                 <div class="image-container">
-                    <div class="image-box">
+                    <div class="image-box" >
                         <p class="image-desc"></p>
-                        <img src="/Proyecto/imagenes/Logo-Oficial-Institucional.png" alt="Armonización Contable">
+                        <img style="width: fit-content;" src="/Proyecto/imagenes/Logo-Oficial-Institucional.png" alt="Armonización Contable">
                     </div>
                 </div>
             </div>
