--- a/views/index.html
+++ b/views/index.html
@@ -6,12 +6,12 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
      crossorigin="anonymous">
-     <link rel="stylesheet" href="/Proyecto/css/mystyle.css">
+     <link rel="stylesheet" href="/proyecto/css/mystyle.css">
     <title>BI Armonización Contable</title>
 </head>
 <body>
     <div class="text-center">
-        <img src="/Proyecto/imagenes/logo-login.png" style="height: 150px; width: 270px;"  class="rounded mx-auto d-block" alt="...">
+        <img src="/proyecto/imagenes/logo-login.png" style="height: 150px; width: 270px;"  class="rounded mx-auto d-block" alt="...">
     </div>
     <form  action="" id="login-form">
         <div class="form-group">
@@ -23,13 +23,13 @@
         <div class="row g-3 align-items-center">
             <div class="col-auto">
             <br>
-            <a href="/Proyecto/views/menu.html">
-                <button type="button" class="btn btn-block btn-md btn-primary">Iniciar sesión</button>
-              </a>
+            <button type="button" class="btn btn-block btn-md btn-primary" onclick="login()">Iniciar sesión</button>
+
               
         </div>
         </div>
     </form>
+    <script src="../scripts/registroUsr.js"></script>
 </body>
 <footer class="footer-content">
     <p style="text-align: center;">2025@ Proyecto Maestría MGTIC</p>
