--- a/views/usuario.html
+++ b/views/usuario.html
@@ -6,7 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous"> 
-     <link rel="stylesheet" href="/Proyecto/css/mystyle.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+     <link rel="stylesheet" href="/proyecto/css/mystyle.css">
      <title>BI Armonización Contable</title>
 </head>
 <body>
@@ -69,15 +71,15 @@
                             <span class="text-danger">*</span><span class="fw-bold">Municipio </span>
                             <!-- <input type="text" id="municipio" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" > -->
                             <select id="municipio" class="form-select">
-                                <option value="1">Mexicali</option>
-                                <option value="2">Tijuana</option>
-                                <option value="3">Ensenada</option>
-                                <option value="4">Rosarito</option>
+                                <option value="Mexicali">Mexicali</option>
+                                <option value="Tijuana">Tijuana</option>
+                                <option value="Ensenada">Ensenada</option>
+                                <option value="Rosarito">Rosarito</option>
                               </select>
                         </div>
                     </div>
                     <br>
-                    <button class="btn btn-block btn-md btn-primary" style="width: 200px; text-align: center; align-content: end;" type="button" id="btnGuardar" onclick="registerUsr()"><span></span>Guardar Cambios</button>
+                    <button class="btn btn-block btn-md btn-primary" style="width: 200px; text-align: center; align-content: end;" type="button" id="btnGuardar" onclick="registerUsr()">Guardar Cambios</button>
                     <br><br>
                     <h3 >Consultar Datos Guardados</h3>
                     <table class="table" id="tablaConsulta" style="border: 1;">
@@ -94,7 +96,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <!-- Aquí se mostrarán los datos -->
+                            <!-- Aquí se mostrarán los datos -->                           
                         </tbody>
                     </table>
                 </form>  
